# grub-efi

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  acinclude.m4  config.h.in  configure.in  grub.spec  makediff  test
docs/: Makefile.am  Makefile.in  grub-crypt.8  grub-install.8  grub.8  grub.info  grub.texi  version.texi
efi/: .gitignore  Makefile.am  byteswap.h  dhcp.h  efichainloader.c  eficon.c  eficore.c  efidisk.c  efidp.c  efigraph.c  efimain.c  efimisc.c  efimm.c  efiserial.c  efitftp.c  efiuga.c  font_8x16.c  graphics.c  graphics.h  pxe.c  pxe.h  ugadebug.h  xpm.c  xpm.h
efi/grub/: misc.h  symbol.h  types.h
efi/grub/efi/: api.h  console_control.h  efi.h  eficall.h  misc.h  time.h
efi/grub/i386/: types.h
efi/grub/x86_64/: linux.h  types.h
efi/ia32/: callwrap.S  callwrap.c  reloc.c  setjmp.S
efi/ia32/loader/: bin_to_h.c  linux.c  switch.S  switch.h
efi/x86_64/: callwrap.S  callwrap.c  crt0-efi.S  elf_efi.lds  reloc.c  setjmp.S
efi/x86_64/loader/: Makefile  linux.c  switch.S  switch.h
grub/: Makefile.am  Makefile.in  asmstub.c  efitftp.c  main.c
lib/: Makefile.in  device.c
netboot/: Makefile.in  etherboot.h  linux-asm-io.h  main.c  misc.c  osdep.h
stage1/: Makefile.am  Makefile.in  stage1.S
stage2/: .gitignore  Makefile.am  Makefile.in  asm.S  boot.c  btrfs.h  builtins.c  char_io.c  cmdline.c  common.c  disk_io.c  efistubs.c  efistubs.h  fat.h  filesys.h  fsys_btrfs.c  fsys_ext2fs.c  fsys_fat.c  fsys_iso9660.c  fsys_jfs.c  fsys_minix.c  fsys_reiserfs.c  fsys_uefi.c  fsys_vstafs.c  fsys_xfs.c  gpt.h  graphics.c  gunzip.c  mb_info.h  pc_slice.h  serial.c  sha256crypt.c  sha512crypt.c  shared.h  smp-imps.h  stage1_5.c  stage2.c  start.S  term.h  tparm.c  (+1 more)
util/: .gitignore  Makefile.am  Makefile.in  grub-crypt.in  grub-install.in
